deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: deploy-webapp
        labels:
                app: webapp
                type: front-end
spec:
        template:
                metadata:
                        name: nginxv1
                        labels:
                                app: webapp
                                type: front-end
                spec:
                          containers:
                               - name: nginx-webserver
                                 image: nginx
        replicas: 2
        selector:
                matchLabels:
                        type: front-end
