pod-withstorage.yml
apiVersion: v1
kind: Pod
metadata:
        # (name of the POD)
        name: nginxv1
        labels:
                app: webapp
                type: front-end
spec:
        volumes:
                - name: pv-nfs
                  persistentVolumeClaim:
                        claimName: pv-nfs-claim
        containers:
                #(name of the container in the POD)
                - name: nginx-webserver
                  image: nginx
                  volumeMounts:
                        - mountPath: "/mnt/podnfs"
                          name: pv-nfs
