service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
  labels:
    app: APPNAME
    type: front end
spec:
  type: NodePort
  ports:
    - targetPort: 80 #Port on POD
      port: 80 #Port of service the POD is connecting
      nodePort: 30008 #Port that is exposed to outside of the cluster
  selector:
	  app: webapp #Used to bind the PODs to the service
	  type: front-end

#kubectl get service
#NAME                     TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)        AGE
#service-webapp           NodePort    x.x.x.x        <none>        ##:#####/TCP   41h
